# sputniPIC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: Adaptor.h  Alloc.h  BC.h  Basic.h  ConfigFile.h  EMfield.h  Grid.h  IC.h  InterpDensNet.h  InterpDensSpecies.h  InterpDens_aux.h  MaxwellSolver.h  Mover.h  Parameters.h  Particles.h  PrecisionTypes.h  RW_IO.h  Smoothing.h  Solvers.h  Timing.h  Tracking.h  input_array.h  mpi_comm.h
include/gpu/: BC_gpu.cuh  EMfield_gpu.h  Grid_gpu.h  InterpDensNet_gpu.cuh  InterpDensSpecies_gpu.h  Parameters_gpu.h  Particles_gpu.cuh  cudaDummy.cuh  cuda_helper.h  intellisence_cuda_intrinsic.h
inputfiles/: GEM_2D.inp  GEM_2D.inp~  GEM_2D_512_256.inp  GEM_2D_512x256_4_5x5x5.inp  GEM_2D_512x256_4_7x7x7.inp  GEM_2D_track_particles.inp  GEM_3D.inp  GEM_3D_128x64x64_3x3x3.inp  GEM_3D_128x64x64_4_3x3x3.inp  GEM_3D_128x64x64_4_5x5x5.inp  GEM_3D_128x64x64_4_7x7x7.inp  GEM_3D_4species_3x3x3.inp  GEM_3D_4species_4x4x4.inp  GEM_3D_4species_6x6x6.inp  GEM_3D_4species_9x9x9.inp  GEM_3D_small.inp  Uniform.inp
inputfiles/tracking/: GEM_2D_8by2box.inp
scripts/: image.py  storePersistenceDiagram.py
src/: Adaptor.cpp  Alloc.cpp  BC.cpp  Basic.cpp  ConfigFile.cpp  EMfield.cpp  Grid.cpp  IC.cpp  InterpDensNet.cpp  InterpDensSpecies.cpp  MaxwellSolver.cpp  Mover.cpp  Particles.cpp  RW_IO.cpp  Smoothing.cpp  Solvers.cpp  Tracking.cpp  mpi_comm.cpp  sputniPIC.cpp  sputniPIC.cu  sputniPIC_CPU.cpp  sputniPIC_GPU.cpp  sputniPIC_GPU_UVM.cpp
src/gpu/: BC_gpu.cu  EMfield_gpu.cpp  Grid_gpu.cpp  InterpDensNet_gpu.cu  InterpDensSpecies_gpu.cpp  Particles_gpu.cu  cuda_helper.cpp
utils/: verify.cc
